# pvthfhe

./: .gitignore  .gitmodules  .markdownlint.yaml  AGENTS.md  ARCHITECTURE.md  CITATION.cff  Cargo.toml  Dockerfile.quickstart  Justfile  LICENSE  README.md  REPRODUCING.md  SECURITY-ADVISORY-001.md  SECURITY.md  STATUS.md  WARNING.md  deny.toml  parameters.toml  tee
.sisyphus/research/c7-prototypes/: Cargo.toml
crates/pvthfhe-aggregator/: Cargo.toml  build.rs
crates/pvthfhe-aggregator/benches/: aggregate_1024.rs
crates/pvthfhe-aggregator/src/: leader_election.rs  lib.rs
crates/pvthfhe-aggregator/tests/: aggregate_1024_smoke.rs  ajtai_commitment.rs  c5_formation_proof.rs  cyclo_ccs_adapter.rs  cyclo_norm_enforcement.rs  cyclo_real_witness.rs  cyclo_wire.rs  decrypt_aggregation_real_nizk.rs  decrypt_real.rs  decrypt_rejections.rs  decrypt_roundtrip.rs  default_folding_is_cyclo.rs  e2e_real.rs  final_aggregation_proof.rs  fold_e2e_soundness.rs  folding.rs  folding_adversarial.rs  folding_multi_track.rs  folding_n64.rs  folding_relation.rs  folding_tamper.rs  folding_witness_validation.rs  keygen_honest.rs  keygen_malicious.rs  keygen_real.rs  keygen_real_encryption.rs  no_plaintext_without_proof.rs  p2_bench.rs  phase2_gate_smoke.rs  public_anchor_surface.rs  single_fold_path.rs  single_fold_path_release.rs
crates/pvthfhe-bench/: Cargo.toml
crates/pvthfhe-bench/benches/: smoke.rs
crates/pvthfhe-bench/src/: comparison_map.rs  e2e_timings.rs  folding.rs  lib.rs  render_comparison.rs  worked_example.rs
crates/pvthfhe-bench/tests/: baseline_smoke.rs  bench_comparison_reads_artifact.rs  bench_scaling_uses_real_backend.rs  circuit_name_map.rs  comparison_json_shape.rs  e2e_timings_schema.rs  no_unwired_rows.rs  render_comparison.rs  render_comparison_smoke.rs
crates/pvthfhe-circuit-tests/: Cargo.toml
crates/pvthfhe-circuit-tests/src/: bb.rs  lib.rs  nargo.rs  witness_gen.rs
crates/pvthfhe-circuit-tests/tests/: aggregator_final_full_dim.rs  decrypt_share_full_dim.rs  harness_smoke.rs  nova_state_commitment_full.rs  nova_wrap_feasibility.rs  sonobe_state_commitment_full.rs  sonobe_wrap_feasibility.rs  witness_gen.rs
crates/pvthfhe-cli/: Cargo.toml
crates/pvthfhe-cli/src/: compressor_glue.rs  demo_nizk.rs  full_pipeline.rs  lib.rs  main.rs  noir_poseidon.rs  protocol_verifier.rs  pvss_support.rs  scheme_switch.rs
crates/pvthfhe-cli/tests/: atomic_decrypt.rs  demo_banner.rs  demo_defaults.rs  demo_large_n.rs  demo_n_cap.rs  demo_runs_full_pipeline.rs  demo_seed_flag.rs  demo_threshold.rs  e2e_invokes_all_phases.rs  e2e_memory_budget.rs  e2e_phase_timing.rs  e2e_pipeline_soundness.rs  e2e_uses_lattice_pvss.rs  e2e_uses_nova.rs  e2e_uses_sonobe.rs  e2e_writes_timings.rs  fold_inputs_real.rs  fold_soundness.rs  params_consistency.rs  pre_reveal_binding_tuple.rs  run_demo_invokes_nizk.rs  subcommands.rs  threshold_not_silently_lowered.rs
crates/pvthfhe-compressor/: Cargo.toml
crates/pvthfhe-compressor/examples/: nova_isolated.rs  sonobe_isolated.rs
crates/pvthfhe-compressor/src/: lib.rs  merkle.rs  poly_eval.rs  witness.rs
crates/pvthfhe-compressor/tests/: bfv_encryption_adversarial.rs  c7_merkle_circuit.rs  c7_phase2_n8192.rs  c7_step_circuit.rs  compressed_anchor_surface.rs  cyclo_fold_ring_constraints.rs  cyclo_r1cs_verifier.rs  dealer_parity_works.rs  fold_verifier_step.rs  greyhound_session_binding.rs  ivc_steps_match_n.rs  latticefold_micronova_integration.rs  latticefold_roundtrip.rs  merkle_domain_sep.rs  micronova_compression.rs  micronova_heterogeneous.rs  multi_input_step_circuit.rs  nova_isolated_mem.rs  nova_roundtrip.rs  nova_sanity.rs  ring_verifier_circuit.rs  s1_native_noir_hash_divergence.rs  sigma_repetition_soundness.rs  sonobe_isolated_mem.rs  sonobe_roundtrip.rs  spec_addendum_present.rs  srs_binding.rs  srs_committed_onchain.rs  step_circuit_fold_relation.rs  step_circuit_relation.rs  trait_object.rs  typed_step_circuit.rs
crates/pvthfhe-core/: Cargo.toml
crates/pvthfhe-core/src/: lib.rs
crates/pvthfhe-core/tests/: noise_budget.rs  round_trip_props.proptest-regressions  round_trip_props.rs  tamper_props.rs  vectors.rs
crates/pvthfhe-cyclo/: Cargo.toml
crates/pvthfhe-cyclo/src/: accumulator_codec.rs  adapter.rs  ajtai.rs  ccs_encode.rs  ccs_rlwe.rs  driver.rs  extension.rs  fiat_shamir.rs  fold.rs  lib.rs  range_check.rs  ring.rs
crates/pvthfhe-cyclo/tests/: adversarial_norm.rs  ajtai_commitment.rs  backend_id_banner.rs  ccs_encode.rs  ccs_full_matrix_3x3.rs  ccs_rlwe_relation.rs  ccs_rq_satisfiability.rs  ccs_satisfiability.rs  challenge_entropy.rs  cyclo_ternary_transcript.rs  decompose.rs  dos_bounds.rs  extension.rs  fold_ajtai_commitment.rs  fold_binding_adversarial.rs  fold_driver_t10.rs  fold_one.rs  forgery_resistance.rs  multi_track_fold_binding.rs  nifs_decomposition.rs  nifs_folding.rs  no_sha_tautology.rs  no_stub_in_production.rs  norm_satisfiability_witness_consistency.rs  placeholder.rs  range_check.rs  ring_ntt.rs  verify_fold_satisfiability.rs  witness_norm.rs
crates/pvthfhe-enclave-adapter/: Cargo.toml
crates/pvthfhe-enclave-adapter/src/: lib.rs
crates/pvthfhe-enclave-adapter/tests/: enclave_attestation_stub.rs  smoke.rs
crates/pvthfhe-enclave-adapter/vendor-stub/: enclave_types.rs
crates/pvthfhe-fhe/: Cargo.toml  build.rs
crates/pvthfhe-fhe-poulpy/: Cargo.toml
crates/pvthfhe-fhe-poulpy/src/: ckks_impl.rs  lib.rs  poulpy_inner.rs
crates/pvthfhe-fhe/src/: dkg_cache.rs  error.rs  fhers.rs  lib.rs  mock.rs  mock_impl.rs  real_nizk.rs  types.rs  wire.rs
crates/pvthfhe-fhe/tests/: aggregate_uses_submitted_shares.rs  banner.rs  c7_coefficient_check.rs  committed_smudge_requires_esm.rs  conformance.rs  decrypt_witness_roundtrip.rs  dep_lock.rs  followon.rs  (+20 more)
crates/pvthfhe-fuzz/: Cargo.toml
crates/pvthfhe-keygen/: Cargo.toml
crates/pvthfhe-micronova/: Cargo.toml  README.md
crates/pvthfhe-nizk/: Cargo.toml
crates/pvthfhe-non-equiv/: Cargo.toml
crates/pvthfhe-offchain-verifier/: Cargo.toml
crates/pvthfhe-pvss/: Cargo.toml
crates/pvthfhe-tests/: Cargo.toml
crates/pvthfhe-types/: Cargo.toml
(+1239 files in other folders)
