[workspace]
resolver = "2"
members = [
    "crates/pvthfhe-core",
    "crates/pvthfhe-fhe",
    "crates/pvthfhe-circuits",
    "crates/pvthfhe-aggregator",
    "crates/pvthfhe-keygen-spec",
    "crates/pvthfhe-keygen",
    "crates/pvthfhe-cli",
    "crates/pvthfhe-bench",
    "crates/pvthfhe-api",
    "crates/pvthfhe-enclave-adapter",
]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "warn"
as_conversions = "warn"
