[package]
name = "pvthfhe-spec-tests"
version = "0.1.0"
edition = "2021"
publish = false
autobins = false
autoexamples = false
autotests = false
autobenches = false

[workspace]
resolver = "2"
members = [
    "crates/pvthfhe-core",
    "crates/pvthfhe-fhe",
    "crates/pvthfhe-fhe-poulpy",
    "crates/pvthfhe-circuits",
    "crates/pvthfhe-circuit-tests",
    "crates/pvthfhe-offchain-verifier",
    "crates/pvthfhe-aggregator",
    "crates/pvthfhe-keygen-spec",
    "crates/pvthfhe-keygen",
    "crates/pvthfhe-cli",
    "crates/pvthfhe-bench",
    "crates/pvthfhe-rng",
    "crates/pvthfhe-enclave-adapter",
    "crates/pvthfhe-nizk",
    "crates/pvthfhe-domain-tags",
    "crates/pvthfhe-pvss",
    "crates/pvthfhe-cyclo",
    "crates/pvthfhe-compressor",
    "crates/pvthfhe-types",
    "crates/pvthfhe-wire",
    "crates/pvthfhe-fuzz",
    "crates/pvthfhe-tests",
]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "allow"
as_conversions = "allow"

# ── arkworks crate patches ───────────────────────────────────────────────
# Most arkworks crates track the upstream `algebra` / `snark` monorepos and
# `groth16` / `poly-commit` / `std` standalone repositories. Two forks are
# needed because the crates.io releases are too old for the workspace Rust
# version (1.95.0) or for the Nova dependency chain:
#
# flyingnobita/crypto-primitives (rev f559264)
#   Upstream `ark-crypto-primitives` v0.4.0 on crates.io depends on
#   `ark-ff = "0.4"` (re-exported as `ark_ff::prf`). This conflicts with
#   the workspace-wide `ark-ff` dependency (0.5 from the `algebra` monorepo).
#   The flyingnobita fork backports the 0.5 API surface so all crates in the
#   workspace use a single `ark-ff` version. Without this fork:
#     error[E0277]: the trait bound `ark_bn254::Fr: ark_ff::PrimeField` is not satisfied
#
# flyingnobita/r1cs-std_yelhousni (rev b4bab0c)
#   Upstream `ark-r1cs-std` v0.4.0 also pins `ark-ff = "0.4"` and lacks
#   the `FieldVar::constant` constructor used by the Nova Nova step
#   circuit (`CycloFoldStepCircuit`). The fork adds the missing constructor
#   and migrates to the `ark-ff` 0.5 ecosystem.
# ──────────────────────────────────────────────────────────────────────────
[patch.crates-io]
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "b3b4a15" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-relations = { git = "https://github.com/arkworks-rs/snark" }
ark-snark = { git = "https://github.com/arkworks-rs/snark" }
ark-crypto-primitives = { git = "https://github.com/flyingnobita/crypto-primitives", rev = "f559264" }
ark-r1cs-std = { git = "https://github.com/flyingnobita/r1cs-std_yelhousni", rev = "b4bab0c" }
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit" }
ark-bn254 = { git = "https://github.com/arkworks-rs/algebra" }
ark-grumpkin = { git = "https://github.com/arkworks-rs/algebra" }

[[test]]
name = "spec_consistency"
path = "tests/integration/spec_consistency.rs"

[[test]]
name = "policy_invariants"
path = "tests/integration/policy_invariants.rs"

[[test]]
name = "docs_truthful"
path = "tests/integration/docs_truthful.rs"
