[package]
name = "pvthfhe-aggregator"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lints]
workspace = true

[dependencies]
pvthfhe-fhe = { path = "../pvthfhe-fhe" }
pvthfhe-cyclo = { path = "../pvthfhe-cyclo" }
pvthfhe-domain-tags = { path = "../pvthfhe-domain-tags" }
pvthfhe-nizk = { path = "../pvthfhe-nizk" }
pvthfhe-pvss = { path = "../pvthfhe-pvss" }
pvthfhe-types = { path = "../pvthfhe-types" }
tokio = { version = "1", features = ["rt", "macros"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "1"
ark-ff = "0.5"
ark-bn254 = "0.5"

[dev-dependencies]
pvthfhe-fhe = { path = "../pvthfhe-fhe", features = ["mock"] }
pvthfhe-domain-tags = { path = "../pvthfhe-domain-tags" }
tokio = { version = "1", features = ["rt", "macros", "test-util"] }
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
syn = { version = "2", features = ["full"] }
walkdir = "2"

[features]
default = ["real-folding"]
real-folding = []
legacy-fold = []
real-verifier = ["real-folding"]
real-pvss = []
real-nizk = []
mock = ["pvthfhe-fhe/mock"]

[[test]]
name = "cyclo_wire"
path = "tests/cyclo_wire.rs"

[[test]]
name = "adversarial"
path = "tests/adversarial/mod.rs"

[[test]]
name = "folding"
path = "tests/folding.rs"

[[test]]
name = "folding_adversarial"
path = "tests/folding_adversarial.rs"
required-features = ["real-folding"]

[[test]]
name = "p2_bench"
path = "tests/p2_bench.rs"
required-features = ["real-folding"]

[[test]]
name = "cyclo_norm_enforcement"
path = "tests/cyclo_norm_enforcement.rs"

[[test]]
name = "ajtai_commitment"
path = "tests/ajtai_commitment.rs"

[[test]]
name = "e2e_real"
path = "tests/e2e_real.rs"
required-features = ["real-verifier"]

[[bench]]
name = "aggregate_1024"
harness = false
