[package]
name = "pvthfhe-aggregator"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lints]
workspace = true

[dependencies]
pvthfhe-fhe = { path = "../pvthfhe-fhe" }
pvthfhe-cyclo = { path = "../pvthfhe-cyclo" }
pvthfhe-domain-tags = { path = "../pvthfhe-domain-tags" }
pvthfhe-nizk = { path = "../pvthfhe-nizk" }
pvthfhe-pvss = { path = "../pvthfhe-pvss" }
pvthfhe-keygen-spec = { path = "../pvthfhe-keygen-spec" }
pvthfhe-types = { path = "../pvthfhe-types" }
anyhow = "1"
tokio = { version = "1", features = ["rt", "macros"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "1"
ark-ff = "0.5"
ark-bn254 = "0.5"

[dev-dependencies]
pvthfhe-fhe = { path = "../pvthfhe-fhe" }
pvthfhe-domain-tags = { path = "../pvthfhe-domain-tags" }
tokio = { version = "1", features = ["rt", "macros", "test-util"] }
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
syn = { version = "2", features = ["full"] }
walkdir = "2"

[features]
default = ["real-folding"]
production-profile = [
    "real-folding",
    "real-verifier",
    "real-pvss",
    "real-nizk",
    "pvthfhe-fhe/production-profile",
]
real-folding = []
legacy-fold = []
real-verifier = ["real-folding"]
real-pvss = []
real-nizk = []
mock = ["pvthfhe-fhe/mock"]

[[test]]
name = "cyclo_wire"
path = "tests/cyclo_wire.rs"

[[test]]
name = "adversarial"
path = "tests/adversarial/mod.rs"
required-features = ["mock"]

[[test]]
name = "folding"
path = "tests/folding.rs"

[[test]]
name = "folding_adversarial"
path = "tests/folding_adversarial.rs"

[[test]]
name = "p2_bench"
path = "tests/p2_bench.rs"

[[test]]
name = "cyclo_norm_enforcement"
path = "tests/cyclo_norm_enforcement.rs"

[[test]]
name = "aggregate_1024_smoke"
path = "tests/aggregate_1024_smoke.rs"

[[test]]
name = "ajtai_commitment"
path = "tests/ajtai_commitment.rs"

[[test]]
name = "e2e_real"
path = "tests/e2e_real.rs"
required-features = ["real-verifier", "mock"]

[[test]]
name = "decrypt_rejections"
path = "tests/decrypt_rejections.rs"
required-features = ["mock"]

[[test]]
name = "decrypt_real"
path = "tests/decrypt_real.rs"

[[test]]
name = "decrypt_roundtrip"
path = "tests/decrypt_roundtrip.rs"
required-features = ["mock"]

[[test]]
name = "keygen_honest"
path = "tests/keygen_honest.rs"
required-features = ["mock"]

[[test]]
name = "keygen_malicious"
path = "tests/keygen_malicious.rs"
required-features = ["mock"]

[[test]]
name = "keygen_real_encryption"
path = "tests/keygen_real_encryption.rs"

[[test]]
name = "no_plaintext_without_proof"
path = "tests/no_plaintext_without_proof.rs"
required-features = ["mock"]

[[test]]
name = "c5_formation_proof"
path = "tests/c5_formation_proof.rs"
required-features = ["mock"]

[[test]]
name = "folding_multi_track"
path = "tests/folding_multi_track.rs"

[[test]]
name = "folding_relation"
path = "tests/folding_relation.rs"

[[test]]
name = "folding_witness_validation"
path = "tests/folding_witness_validation.rs"

[[bench]]
name = "aggregate_1024"
harness = false
