[package]
name = "pvthfhe-bench"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lints.rust]
missing_docs = "allow"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
as_conversions = "warn"

[features]
default = ["nova-compressor"]
backend-fhe-rs = ["dep:fhe", "dep:fhe-math"]
backend-poulpy = ["dep:poulpy-hal", "dep:poulpy-cpu-ref"]
surrogate-compressor = []
nova-compressor = ["dep:pvthfhe-compressor"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pvthfhe-pvss = { path = "../pvthfhe-pvss" }
pvthfhe-rng = { path = "../pvthfhe-rng" }
pvthfhe-aggregator = { path = "../pvthfhe-aggregator" }
pvthfhe-types = { path = "../pvthfhe-types" }
pvthfhe-keygen = { path = "../pvthfhe-keygen" }
pvthfhe-fhe = { path = "../pvthfhe-fhe", features = ["real-nizk", "mock"] }
rand_core = "0.6"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
pvthfhe-compressor = { path = "../pvthfhe-compressor", optional = true }
tera = "1"

# fhe.rs - pin by exact commit SHA
fhe = { package = "fhe", git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b", optional = true }
fhe-math = { package = "fhe-math", git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b", optional = true }

# poulpy - pin by exact commit SHA
poulpy-hal = { git = "https://github.com/poulpy-fhe/poulpy", rev = "4a1f0c642cef7e5830287c3d6af7e013d8a7bda4", optional = true }
poulpy-cpu-ref = { git = "https://github.com/poulpy-fhe/poulpy", rev = "4a1f0c642cef7e5830287c3d6af7e013d8a7bda4", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "smoke"
harness = false

[[bin]]
name = "bench_scaling"
path = "src/bin/bench_scaling.rs"

[[bin]]
name = "bench_p4"
path = "src/bin/bench_p4.rs"

[[bin]]
name = "worked_example"
path = "src/bin/worked_example.rs"

[[bin]]
name = "gen_goldens"
path = "src/bin/gen_goldens.rs"

[[bin]]
name = "bench_nizk"
path = "src/bin/bench_nizk.rs"

[[bin]]
name = "fhe_baseline"
path = "src/bin/fhe_baseline.rs"

[[bin]]
name = "bench_comparison"
path = "src/bin/bench_comparison.rs"

[[bin]]
name = "render_comparison"
path = "src/bin/render_comparison.rs"
