[package]
name = "pvthfhe-circuit-tests"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
ark-bn254 = "0.5"
ark-ff = "0.5"
light-poseidon = "0.4"
pvthfhe-compressor = { path = "../pvthfhe-compressor" }
pvthfhe-types = { version = "0.1.0", path = "../pvthfhe-types" }
thiserror = "1"

[[test]]
name = "harness_smoke"
path = "tests/harness_smoke.rs"

[[test]]
name = "decrypt_share_full_dim"
path = "tests/decrypt_share_full_dim.rs"

[[test]]
name = "aggregator_final_full_dim"
path = "tests/aggregator_final_full_dim.rs"

[[test]]
name = "nova_state_commitment_full"
path = "tests/nova_state_commitment_full.rs"

[lints]
workspace = true

[[bin]]
name = "gen_witness"
path = "src/bin/gen_witness.rs"

[[bin]]
name = "gen_nova_state_witness"
path = "src/bin/gen_nova_state_witness.rs"
