[package]
name = "pvthfhe-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
default-run = "pvthfhe-cli"

[[bin]]
name = "pvthfhe-cli"
path = "src/main.rs"
required-features = ["with-fhe"]

[[bin]]
name = "pvthfhe-e2e"
path = "src/bin/pvthfhe_e2e.rs"
required-features = ["with-fhe"]

[[bin]]
name = "per-node"
path = "src/bin/per_node.rs"
required-features = ["with-fhe"]

[[bin]]
name = "per-aggregator"
path = "src/bin/per_aggregator.rs"
required-features = ["with-fhe", "sonobe-compressor"]

[[bin]]
name = "sonobe-min"
path = "src/bin/sonobe_min.rs"
required-features = ["sonobe-compressor"]

[lints]
workspace = true

[dependencies]
pvthfhe-keygen = { path = "../pvthfhe-keygen", optional = true }
pvthfhe-bench = { path = "../pvthfhe-bench", optional = true }
pvthfhe-nizk = { path = "../pvthfhe-nizk" }
pvthfhe-pvss = { path = "../pvthfhe-pvss", optional = true }
pvthfhe-fhe = { path = "../pvthfhe-fhe", optional = true }
pvthfhe-aggregator = { path = "../pvthfhe-aggregator", optional = true }
pvthfhe-compressor = { path = "../pvthfhe-compressor", optional = true }
pvthfhe-circuit-tests = { path = "../pvthfhe-circuit-tests", optional = true }
pvthfhe-cyclo = { path = "../pvthfhe-cyclo" }
pvthfhe-rng = { path = "../pvthfhe-rng" }
pvthfhe-types = { path = "../pvthfhe-types" }
pvthfhe-domain-tags = { path = "../pvthfhe-domain-tags" }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
rayon = "1"
serde_json = "1"
ark-bn254 = "0.5"
ark-ff = "0.5"
fhe = { git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b", optional = true }

[features]
default = ["with-fhe", "sonobe-compressor", "pipeline-extra-checks"]
with-fhe = [
    "dep:pvthfhe-keygen",
    "dep:pvthfhe-bench",
    "dep:pvthfhe-pvss",
    "dep:pvthfhe-fhe",
    "dep:pvthfhe-aggregator",
    "dep:fhe",
]
mock = ["with-fhe", "pvthfhe-fhe/mock", "pvthfhe-aggregator/mock"]
probe-no-fhe = []
surrogate-compressor = []
sonobe-compressor = ["dep:pvthfhe-compressor", "dep:pvthfhe-circuit-tests"]
# Stage 0 tripwire bypass: enable seeded RNG in demo paths.
# Must NOT be enabled in release/production builds.
demo-seeded-rng = []
# Enable extra pipeline verification checks (E.1 share-computation + E.2 DKG-aggregation).
# Requires with-fhe (default). Opt-in; existing demo behavior unchanged without this flag.
pipeline-extra-checks = []

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
