[package]
name = "pvthfhe-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
default-run = "pvthfhe-cli"

[[bin]]
name = "pvthfhe-cli"
path = "src/main.rs"
required-features = ["with-fhe"]

[[bin]]
name = "pvthfhe-e2e"
path = "src/bin/pvthfhe_e2e.rs"
required-features = ["with-fhe"]

[[bin]]
name = "per-node"
path = "src/bin/per_node.rs"
required-features = ["with-fhe"]

[[bin]]
name = "per-aggregator"
path = "src/bin/per_aggregator.rs"
required-features = ["with-fhe"]

# nova-min binary removed (Track A)

[lints]
workspace = true

[dependencies]
pvthfhe-keygen = { path = "../pvthfhe-keygen", optional = true }
pvthfhe-bench = { path = "../pvthfhe-bench", optional = true }
pvthfhe-nizk = { path = "../pvthfhe-nizk" }
pvthfhe-pvss = { path = "../pvthfhe-pvss", optional = true }
pvthfhe-fhe = { path = "../pvthfhe-fhe", optional = true }
pvthfhe-aggregator = { path = "../pvthfhe-aggregator", optional = true }
pvthfhe-compressor = { path = "../pvthfhe-compressor", optional = true }
pvthfhe-circuit-tests = { path = "../pvthfhe-circuit-tests", optional = true }
pvthfhe-cyclo = { path = "../pvthfhe-cyclo" }
pvthfhe-rng = { path = "../pvthfhe-rng" }
pvthfhe-types = { path = "../pvthfhe-types" }
pvthfhe-domain-tags = { path = "../pvthfhe-domain-tags" }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
rayon = "1"
serde_json = "1"
ark-bn254 = { version = "0.5", optional = true }
ark-ec = "0.5"
ark-ff = "0.5"
light-poseidon = "0.4"
fhe = { git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b", optional = true }
pvthfhe-fhe-poulpy = { path = "../pvthfhe-fhe-poulpy", optional = true }

[features]
default = ["with-fhe", "nova-compressor", "pipeline-extra-checks"]
bfv-n4 = ["pvthfhe-compressor/bfv-n4"]
production-profile = [
    "with-fhe",
    "nova-compressor",
    "pipeline-extra-checks",
    "pvthfhe-fhe/production-profile",
    "pvthfhe-aggregator/production-profile",
    "pvthfhe-compressor/production-profile",
    "pvthfhe-keygen/production-profile",
    "pvthfhe-pvss/production-profile",
    "pvthfhe-bench/production-profile",
]
with-fhe = [
    "dep:pvthfhe-keygen",
    "dep:pvthfhe-bench",
    "dep:pvthfhe-pvss",
    "dep:pvthfhe-fhe",
    "dep:pvthfhe-aggregator",
    "dep:fhe",
]
mock = ["with-fhe", "pvthfhe-fhe/mock", "pvthfhe-aggregator/mock"]
probe-no-fhe = []
surrogate-compressor = []
nova-compressor = ["dep:pvthfhe-compressor", "dep:ark-bn254", "enable-latticefold"]
enable-greyhound = ["nova-compressor"]
# Stage 0 tripwire bypass: enable seeded RNG in demo paths.
# Must NOT be enabled in release/production builds.
demo-seeded-rng = []
# Enable extra pipeline verification checks (E.1 share-computation + E.2 DKG-aggregation).
# Requires with-fhe (default). Opt-in; existing demo behavior unchanged without this flag.
pipeline-extra-checks = []
# Enable CKKS backend via Poulpy (requires pvthfhe-fhe-poulpy).
enable-ckks = ["dep:pvthfhe-fhe-poulpy", "pvthfhe-fhe-poulpy/enable-ckks", "pvthfhe-nizk/enable-ckks"]
# Enable TFHE backend via Poulpy (requires pvthfhe-fhe-poulpy).
enable-tfhe = ["dep:pvthfhe-fhe-poulpy", "pvthfhe-fhe-poulpy/enable-tfhe", "pvthfhe-nizk/enable-tfhe"]
# Enable LaZer auto-generated sigma proofs (P1 Phase 2).
enable-lazer = ["pvthfhe-nizk/enable-lazer"]
# Symphony T3/T4 are now compiled unconditionally (S8). Feature flags removed.
# P3 LatticeFold+: lattice-native folding with algebraic range proofs.
enable-latticefold = ["nova-compressor", "pvthfhe-compressor/enable-latticefold"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde_json = "1"
pvthfhe-fhe = { path = "../pvthfhe-fhe" }

[[test]]
name = "atomic_decrypt"
path = "tests/atomic_decrypt.rs"
required-features = ["mock"]
