[package]
name = "pvthfhe-compressor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
pvthfhe-aggregator = { path = "../pvthfhe-aggregator" }
pvthfhe-domain-tags = { path = "../pvthfhe-domain-tags" }
pvthfhe-rng = { path = "../pvthfhe-rng" }
pvthfhe-types = { path = "../pvthfhe-types" }
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-grumpkin = "0.5"
ark-r1cs-std = "0.5"
ark-relations = "0.5"
ark-serialize = "0.5"
# ── Nova (Microsoft) ─────────────────────────────────────────────────────
# Replaces folding-schemes (Sonobe) which had a pp_hash serialization bug
# causing IVCVerificationFail in C4/C5 verification. Microsoft Nova uses
# bellpepper constraint system (AllocatedNum, ConstraintSystem) instead of
# ark-r1cs-std (FpVar, ConstraintSystemRef).
# ──────────────────────────────────────────────────────────────────────────
arecibo = { version = "0.1", optional = true }
bellpepper-core = { version = "0.4", optional = true }
bincode = { version = "1", optional = true }
bp-ff = { package = "ff", version = "0.13", optional = true }
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
sha2 = "0.10"
sha3 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
[features]
default = ["transparent-decider"]
# Always produce transparent IVC proof hash without a Groth16 trusted ceremony.
# The IVC proof bytes and pp_hash are embedded directly in the compressed proof
# format for on-chain verification via the Poseidon hash shortcut.
transparent-decider = []
# Enables the Nova (arecibo) proof-compression backend.
# When disabled, SonobeCompressor and related types are stubbed out
# so the rest of the workspace can compile without a Nova dependency.
# Full migration to arecibo's bellpepper constraint system is
# deferred to a future phase (TBD).
nova-backend = ["arecibo", "bellpepper-core", "bincode", "bp-ff"]

[dev-dependencies]

[lints]
workspace = true

[[bin]]
name = "sonobe-min-compressor"
path = "src/bin/sonobe_min.rs"
