[package]
name = "pvthfhe-compressor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
pvthfhe-aggregator = { path = "../pvthfhe-aggregator" }
pvthfhe-domain-tags = { path = "../pvthfhe-domain-tags" }
pvthfhe-rng = { path = "../pvthfhe-rng" }
pvthfhe-types = { path = "../pvthfhe-types" }
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-grumpkin = "0.5"
ark-r1cs-std = "0.5"
ark-relations = "0.5"
ark-serialize = "0.5"
# ── Nova SNARK (Microsoft Nova / arecibo) ────────────────────────────────
# Primary proof-compression backend. Uses nova-snark crate name (aliased
# from arecibo). Full migration from folding-schemes (Sonobe) completed.
nova-snark = { version = "0.71", features = ["test-utils"] }
# KNOWN_LIMITATION(production-kzg): test-utils generates fresh test SRS per call.
# Production needs real PTAU files via PublicParams::setup_with_ptau_dir.
# The Aztec Ignition SRS (already used by UltraHonk) covers up to 2^28 gates.
# Set PVTHFHE_PTAU_DIR to enable production KZG.
bellpepper-core = "0.4"
bincode = "1"
bp-ff = { package = "ff", version = "0.13" }
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
sha2 = "0.10"
sha3 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
[features]
default = ["transparent-decider"]
production-profile = ["transparent-decider", "pvthfhe-aggregator/production-profile"]
# Always produce transparent IVC proof hash without a Groth16 trusted ceremony.
# The IVC proof bytes and pp_hash are embedded directly in the compressed proof
# format for on-chain verification via the Poseidon hash shortcut.
transparent-decider = []
# Legacy Sonobe folding-schemes backend. NOT in defaults — nova-snark is the
# only active backend. This feature exists solely to preserve legacy code for
# reference during migration.
legacy-nova = []
# Enables the Greyhound lattice-based polynomial commitment scheme as a
# transparent alternative to KZG commitments in the Nova accumulator.
# When enabled, NovaCompressor uses Greyhound's transparent setup instead
# of KZG trusted setup. The KZG path remains available as fallback.
enable-greyhound = []
# Symphony T3 (monomial embedding range proofs) and T4 (random projection) are
# now compiled unconditionally. The feature flags have been removed in S8.
# See ARCHITECTURE.md §Symphony for details.
# P3 LatticeFold+: lattice-native folding with algebraic range proofs.
# Replaces bit-decomposition range checks with polynomial evaluation.
enable-latticefold = []

[dev-dependencies]

[lints]
workspace = true

[[bin]]
name = "nova-min-compressor"
path = "src/bin/nova_min.rs"
