[package]
name = "pvthfhe-compressor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
pvthfhe-aggregator = { path = "../pvthfhe-aggregator" }
pvthfhe-domain-tags = { path = "../pvthfhe-domain-tags" }
pvthfhe-rng = { path = "../pvthfhe-rng" }
pvthfhe-types = { path = "../pvthfhe-types" }
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-serialize = "0.5"
bincode = "1"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
sha2 = "0.10"
hex = "0.4"
sha3 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
[features]
default = []
production-profile = ["pvthfhe-aggregator/production-profile"]
enable-latticefold = []

# Use BFV polynomial degree N=4 (demo scale) for fast testing instead of the
# production default N=8192. Constraint count scales linearly with N for Add
# and quadratically for Mul, so N=4 tests complete in milliseconds vs hours.
bfv-n4 = []

[dev-dependencies]

[lints]
workspace = true
