[package]
name = "pvthfhe-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
trace-test-vectors = []

[dependencies]
pvthfhe-compressor = { path = "../pvthfhe-compressor" }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
proptest = "1"
serde_json = "1"
hex = "0.4"
pvthfhe-fhe = { path = "../pvthfhe-fhe", features = ["mock"] }
pvthfhe-types = { path = "../pvthfhe-types" }
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
