[package]
name = "pvthfhe-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
production-profile = ["pvthfhe-compressor/production-profile"]
mock = ["pvthfhe-fhe/mock"]
trace-test-vectors = []

[dependencies]
pvthfhe-compressor = { path = "../pvthfhe-compressor" }

[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
proptest = "1"
serde_json = "1"
hex = "0.4"
pvthfhe-fhe = { path = "../pvthfhe-fhe" }
pvthfhe-types = { path = "../pvthfhe-types" }
serde = { version = "1", features = ["derive"] }

[[test]]
name = "round_trip_props"
path = "tests/round_trip_props.rs"
required-features = ["mock"]

[[test]]
name = "tamper_props"
path = "tests/tamper_props.rs"
required-features = ["mock"]

[[test]]
name = "vectors"
path = "tests/vectors.rs"
required-features = ["mock"]

[lints]
workspace = true
