[package]
name = "pvthfhe-cyclo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
pvthfhe-nizk = { path = "../pvthfhe-nizk" }
thiserror = "1"
sha2 = "0.10"
rand_core = "0.6"
fhe-math = { package = "fhe-math", git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b" }

[dev-dependencies]
rand_chacha = "0.3"

[lints]
workspace = true
