[package]
name = "pvthfhe-enclave-adapter"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
production-profile = ["pvthfhe-fhe/production-profile"]
mock = ["pvthfhe-fhe/mock"]
stub = []

[dependencies]
pvthfhe-fhe = { path = "../pvthfhe-fhe" }
pvthfhe-types = { path = "../pvthfhe-types" }
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
pvthfhe-fhe = { path = "../pvthfhe-fhe" }
rand = "0.8"
syn = { version = "2", features = ["full"] }

[[test]]
name = "smoke"
path = "tests/smoke.rs"
required-features = ["mock"]

[lints]
workspace = true
