[package]
name = "pvthfhe-fhe"
version = "0.1.0"
license = "MIT"
edition = "2021"

[features]
default = ["real-nizk"]
mock = []
real-nizk = []
surrogate-decrypt-share = []
trace-decrypt = []

[dependencies]
pvthfhe-rng = { path = "../pvthfhe-rng" }
rand_distr = "0.4"
pvthfhe-nizk = { path = "../pvthfhe-nizk" }
pvthfhe-domain-tags = { path = "../pvthfhe-domain-tags" }
pvthfhe-types = { path = "../pvthfhe-types" }
pvthfhe-wire = { path = "../pvthfhe-wire" }
rand_chacha = "0.3"
rand = "0.8"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
rand_core = "0.6"
fhe = { git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b" }
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b" }
fhe-math = { package = "fhe-math", git = "https://github.com/gnosisguild/fhe.rs", rev = "5f24d0b62a7329b789db07a065b68accd614a47b" }
zeroize = { version = "1", features = ["zeroize_derive"] }
tracing = "0.1"
ndarray = "0.15"
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
pvthfhe-keygen = { path = "../pvthfhe-keygen" }
serde_json = "1"
ark-bn254 = "0.5"
ark-ff = "0.5"

[lints]
workspace = true
